# simd

./: CMakeLists.txt  README.md
.github/workflows/: build_test.yaml
src/: simd_compress.cpp  simd_delta.hpp  simd_delta_avx2.cpp  simd_delta_avx512.cpp  simd_delta_scalar.cpp  simd_delta_sse.cpp  simd_util.cpp  simd_util.hpp
test/: basic.cpp
